versioned_docs/version-0.8.0/resources.md
---
sidebar_position: 1.2
---

# Resources

Extensibility is one of the core focus of ewwii. So we aim to provide resources that will help you make your configuration easier.

## Tools

### eiipm

`eiipm` is an official plugin manager for handling ewwii plugins with ease. It automates downloading, compiling, and maintaining plugins in an ewwii configuration.

- Documentation: https://ewwii-sh.github.io/eiipm
- Repository: https://github.com/ewwii-sh/eiipm

## Plugins

Ewwii can be extended with plugins. It is part of our efforts to make ewwii extensible. This section will showcase all the **official** ewwii plugins.

:::danger
Use third-party plugins at your own risk. Only use the plugins that you trust.
:::

### yucky-ewwii

`yucky-ewwii` is an ewwii plugin that brings the `yuck` configuration language support to ewwii. It wont be 1:1 compatible with eww configurations as it is made to follow the standards of ewwii. However, the cost of migration (from eww) is very minimal when using this plugin as there are only a very few things that wont port nicely.

- Documentation: https://ewwii-sh.github.io/yucky-ewwii/
- Repository: https://github.com/ewwii-sh/yucky-ewwii/

