versioned_docs/version-0.9.0/resources.md
---
sidebar_position: 1.2
---

# Resources

Extensibility is one of the core focus of ewwii. So we aim to provide resources that will help you make your configuration easier.

## Quick Links

For those who want it done quick.

- Plugins: https://ewwii-sh.github.io/plugins
- Articles: https://ewwii-sh.github.io/articles
- Discord: https://discord.gg/63bKPx3Wb6

## Plugins

> https://ewwii-sh.github.io/plugins

Ewwii can be extended with plugins. It is part of our efforts to make ewwii extensible. This section will showcase all the **official** ewwii plugins.

See [plugins page](https://ewwii-sh.github.io/plugins) to view all the community and official plugins.

:::danger
Use third-party plugins at your own risk. Only use the plugins that you trust.
:::

## Articles

> https://ewwii-sh.github.io/articles

We post articles on topics like migration guides, tutorials, and just ewwii in general. Its often nice to know a project at a deeper level!

## Discord

> Invite: https://discord.gg/63bKPx3Wb6

Often the preferred way to communicate. Share your ewwii configuration with others and get answers 
to bug reports and questions faster than on GitHub.

## Official Tools & Plugins

Official ewwii tools and plugins that deserve a mention.

### eiipm (plugin manager)

`eiipm` is an official plugin manager for handling ewwii plugins with ease. It automates downloading, compiling, and maintaining plugins in an ewwii configuration.

- Documentation: https://ewwii-sh.github.io/eiipm
- Repository: https://github.com/ewwii-sh/eiipm

### jscore (language)

`jscore` is an official ewwii plugin that adds JavaScript language support to ewwii. It supports npm packages and and is blazingly fast.

- Documentation: https://ewwii-sh.github.io/jscore.ewwii/
- Repository: https://github.com/ewwii-sh/jscore.ewwii/

### yucky-ewwii (language)

`yucky-ewwii` is an ewwii plugin that brings the `yuck` configuration language support to ewwii. It wont be 1:1 compatible with eww configurations as it is made to follow the standards of ewwii. However, the cost of migration (from eww) is very minimal when using this plugin as there are only a very few things that wont port nicely.

- Documentation: https://ewwii-sh.github.io/yucky-ewwii/
- Repository: https://github.com/ewwii-sh/yucky-ewwii/

